# libexif

./: .gitignore  CMakeLists.txt  libexif.pc.cmake
cmake/: libexifConfig.cmake
libexif/: config.h
